crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__2_separate_subpackage_first_and_third_party_imports.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
separate_subpackage_first_and_third_party_imports.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / import sys
2 | | import baz
3 | | from foo import bar, baz
4 | | from foo.bar import blah, blub
5 | | from foo.bar.baz import something
6 | | import foo
7 | | import foo.bar
8 | | import foo.bar.baz
  | |__________________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
1  1  | import sys
   2  |+
2  3  | import baz
3     |-from foo import bar, baz
   4  |+import foo.bar
   5  |+import foo.bar.baz
4  6  | from foo.bar import blah, blub
5  7  | from foo.bar.baz import something
   8  |+
6  9  | import foo
7     |-import foo.bar
8     |-import foo.bar.baz
   10 |+from foo import bar, baz
