crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__add_newline_before_comments.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
add_newline_before_comments.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / import os
2 | | # This is a comment in the same section, so we need to add one newline.
3 | | import sys
4 | | import numpy as np
5 | | # This is a comment, but it starts a new section, so we don't need to add a newline
6 | | # before it.
7 | | import leading_prefix
  | |_____________________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
1 1 | import os
  2 |+
2 3 | # This is a comment in the same section, so we need to add one newline.
3 4 | import sys
  5 |+
4 6 | import numpy as np
  7 |+
5 8 | # This is a comment, but it starts a new section, so we don't need to add a newline
6 9 | # before it.
7 10 | import leading_prefix
