crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__as_imports_comments.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
as_imports_comments.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
   |
 1 | / from foo import (  # Comment on `foo`
 2 | |     Member as Alias,  # Comment on `Alias`
 3 | | )
 4 | |
 5 | | from bar import (  # Comment on `bar`
 6 | |     Member,  # Comment on `Member`
 7 | | )
 8 | |
 9 | | from baz import (  # Comment on `baz`
10 | |     Member as Alias  # Comment on `Alias`
11 | | )
12 | |
13 | | from bop import (  # Comment on `bop`
14 | |     Member  # Comment on `Member`
15 | | )
   | |_^ I001 (unsorted-imports)
   |
   = help: Organize imports

ℹ Safe fix
1     |-from foo import (  # Comment on `foo`
2     |-    Member as Alias,  # Comment on `Alias`
3     |-)
4     |-
5  1  | from bar import (  # Comment on `bar`
6  2  |     Member,  # Comment on `Member`
7     |-)
8     |-
9     |-from baz import (  # Comment on `baz`
10    |-    Member as Alias  # Comment on `Alias`
11 3  | )
12    |-
13    |-from bop import (  # Comment on `bop`
14    |-    Member  # Comment on `Member`
   4  |+from baz import Member as Alias  # Comment on `baz`  # Comment on `Alias`
   5  |+from bop import Member  # Comment on `bop`  # Comment on `Member`
   6  |+from foo import (  # Comment on `foo`
   7  |+    Member as Alias,  # Comment on `Alias`
15 8  | )
