crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__bom_unsorted.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
bom_unsorted.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / ﻿import foo
2 | | import bar
  | |__________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
1   |-﻿import foo
2   |-import bar
  1 |+﻿import bar
  2 |+import foo
