crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__deduplicate_imports.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
deduplicate_imports.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / import os
2 | | import os
3 | | import os as os1
4 | | import os as os2
  | |________________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
1 1 | import os
2   |-import os
3 2 | import os as os1
4 3 | import os as os2
